--- a/src/App.scss
+++ b/src/App.scss
@@ -4,7 +4,8 @@
   justify-content: flex-start;
   align-items: flex-start;
 
-  margin-left: 20px;
+  margin-left: 25px;
+  margin-right: 25px;
   
   h1 {
     font-size: 26px;
