--- a/src/components/section-component/SectionComponent.scss
+++ b/src/components/section-component/SectionComponent.scss
@@ -2,12 +2,16 @@
     font-size: 20px;
     font-weight: 400;
     margin-left: 20px;
+
+    font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
 }
 
 .sectionDescription {
     font-size: 16px;
     font-weight: 400;
     margin-left: 35px;
+
+    font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
 
     white-space: pre-line;
     white-space: pre-wrap;
