--- a/src/components/section-component/SectionComponent.scss
+++ b/src/components/section-component/SectionComponent.scss
@@ -1,52 +1,58 @@
-.sectionTittle {
-    font-size: 20px;
-    font-weight: 400;
-    margin-left: 20px;
 
-    margin-top: 5px !important;
+.sectionWrapper {
 
-    font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
-}
+    width: 85%;
 
-.sectionDescription {
-    font-size: 14px;
-    font-weight: 400;
-    margin-left: 35px;
-
-    font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
-
-    white-space: pre-line;
-    white-space: pre-wrap;
-}
-
-.sectionDocumentsList {
-    font-size: 16px;
-    font-weight: 400;
-    margin-left: 45px;
-
-    font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
-
-    li {
-        margin-bottom: 7px;
-    }
-
-    a {
-        color: #337ab7;
+    .sectionTittle {
+        font-size: 20px;
+        font-weight: 400;
+        margin-left: 20px;
+    
+        margin-top: 5px !important;
+    
+        font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
     }
     
-    a:link {
-        text-decoration: none;
+    .sectionDescription {
+        font-size: 14px;
+        font-weight: 400;
+        margin-left: 35px;
+    
+        font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+    
+        white-space: pre-line;
+        white-space: pre-wrap;
     }
     
-    a:visited {
-        text-decoration: none;
-    }
+    .sectionDocumentsList {
+        font-size: 16px;
+        font-weight: 400;
+        margin-left: 45px;
     
-    a:hover {
-        text-decoration: underline;
-    }
+        font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
     
-    a:active {
-        text-decoration: underline;
+        li {
+            margin-bottom: 7px;
+        }
+    
+        a {
+            color: #337ab7;
+        }
+        
+        a:link {
+            text-decoration: none;
+        }
+        
+        a:visited {
+            text-decoration: none;
+        }
+        
+        a:hover {
+            text-decoration: underline;
+        }
+        
+        a:active {
+            text-decoration: underline;
+        }
     }
 }
