--- a/src/components/section-modal-component/SectionModalComponent.scss
+++ b/src/components/section-modal-component/SectionModalComponent.scss
@@ -83,6 +83,17 @@
             outline: none;
         }
 
+        .ownSelector {
+            width: 100%;
+            padding: 10px 5px;
+            border:none;
+
+            font-size: 18px;
+            font-weight: 500;
+
+            background-color: #fbfbfb;  
+        }
+
         .error {
             border-bottom: 1px solid red;
         }
