feat: Ongoing development for Section Modal

--- a/src/components/section-modal-component/SectionModalComponent.scss
+++ b/src/components/section-modal-component/SectionModalComponent.scss
@@ -66,6 +66,10 @@
             outline: none;
         }
 
+        .ownInputFile {
+            margin-bottom: 10px;
+        }
+
         .ownTextarea {
             width: 100%;
             height: 150px;
