--- a/src/components/section-modal-component/SectionModalComponent.scss
+++ b/src/components/section-modal-component/SectionModalComponent.scss
@@ -132,7 +132,10 @@
     .bottomWrapper {
         display: flex;
         flex-direction: row;
+        align-items: flex-end;
         justify-content: flex-end;
+
+        width: 100%;
     }
 
 }
