--- a/src/components/section-component/SectionComponent.scss
+++ b/src/components/section-component/SectionComponent.scss
@@ -69,12 +69,13 @@
     .sectionOptions {
 
         display: flex;
-        flex-direction: column;
-        justify-content: flex-start;
+        flex-direction: row;
+        justify-content: flex-end;
         align-items: flex-end;
 
         padding-top: 10px;
         padding-right: 10px;
+        padding-bottom: 10px;
 
         width: 100px !important;
 
@@ -82,7 +83,7 @@
             width: 24px !important;
             height: 24px !important;
             padding: 5px;
-            margin-bottom: 15px;
+            margin-left: 15px;
 
             border: 1px solid #337ab7;
 
@@ -99,7 +100,6 @@
 }
 
 .editable {
-    min-height: 150px !important;
     margin-bottom: 15px;
     padding-bottom: 5px;
 
