--- a/src/components/section-modal-component/SectionModalComponent.scss
+++ b/src/components/section-modal-component/SectionModalComponent.scss
@@ -81,7 +81,7 @@
             display: flex;
             flex-direction: row;
             justify-content: flex-start;
-            align-items: flex-start;
+            align-items: center;
 
             width: 100%;
         }
@@ -198,4 +198,12 @@
 
 .marginLeft {
     margin-left: 25px;
+}
+
+.addDocumentImage {
+    width: 24px !important;
+    height: 24px !important;
+    margin-left: 20px;
+    margin-top: 10px;
+    cursor: pointer;
 }
