--- a/src/components/section-modal-component/SectionModalComponent.scss
+++ b/src/components/section-modal-component/SectionModalComponent.scss
@@ -207,3 +207,10 @@
     margin-top: 10px;
     cursor: pointer;
 }
+
+.deleteDocumentImage {
+    width: 24px !important;
+    height: 24px !important;
+    margin-left: 20px;
+    cursor: pointer;
+}
