feat: Improved Files handling

--- a/src/components/section-modal-component/SectionModalComponent.scss
+++ b/src/components/section-modal-component/SectionModalComponent.scss
@@ -94,6 +94,14 @@
             color: #4664A2;
         }
 
+        .lineTextFullWidth {
+            width: 100%;
+
+            font-size: 16px;
+            font-weight: 500;
+            color: #4664A2;
+        }
+
         .ownInput {
             width: 100%;
             padding: 10px 5px;
